<resources>
    <string name="app_name">Avaliacao3CrudRoomHilt</string>
    <string name="name_hint">Nome</string>
    <string name="age_hint">Idade</string>
    <string name="sex_hint">Sexo</string>
    <string name="exclude_item">Excluir Item</string>
    <string name="edit_item">Editar Item</string>
    <string name="dialog_delete_patient">Deletar Paciente</string>
    <string name="dialog_delete_specialty">Deletar Especialidade</string>
    <string name="dialog_delete_doctor">Deletar Médico</string>
    <string name="dialog_delete_schedule">Deletar Agendamento</string>
    <string name="dialog_delete">Deletar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_edit_patient">Editar Paciente</string>
    <string name="dialog_edit_confirm">Salvar</string>
    <string name="patient_id_hint">Id</string>
    <string name="insert_patient_button">Inserir</string>
    <string name="list_patients_button">Listar</string>
    <string name="save_edit_button">Salvar</string>
    <string name="specialty_hint">Especialidade</string>
    <string name="bottom_nav_patients">Pacientes</string>
    <string name="bottom_nav_specialty">Especialidades</string>
    <string name="bottom_nav_doctor">Médicos</string>
    <string name="bottom_nav_schedule">Agendamento</string>
    <string name="doctor_hint_specialty">Especialidade</string>
    <string name="patient_hint">Paciente</string>
    <string name="doctor_hint">Médico</string>
    <string name="specialty_filter">Filtro Especialidade</string>
    <string name="sex_filter">Filtro Gênero</string>
</resources>