<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SpecialtyFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSpecialtyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidthFocused="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSpecialtyName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/specialty_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPatientButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSpecialtyName">

        <Button
            android:id="@+id/buttonInsertSpecialty"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/smaller_margin"
            android:layout_marginBottom="@dimen/smaller_margin"
            android:text="@string/insert_patient_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonShowSpecialtyList"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/smaller_margin"
            android:layout_marginBottom="@dimen/smaller_margin"
            android:text="@string/list_patients_button"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/view_margin_list"
        android:layout_marginEnd="@dimen/view_margin_list"
        android:background="@color/line_list_background"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPatientButtons" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSpecialty"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPatientButtons"
        tools:listitem="@layout/item_patient" />


</androidx.constraintlayout.widget.ConstraintLayout>